--- a/SpringBoot_Banking_App_060621/src/main/resources/application.properties
+++ b/SpringBoot_Banking_App_060621/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 spring.h2.console.enabled=true
-spring.sql.init.platform=h2
-spring.datasource.url=jdbc:h2:mem:TestDB
+spring.datasource.url=jdbc:h2:mem:testdb2
+#spring.datasource.url=jdbc:h2:file:C:/data/test1  # For saving it as a file. But has to creat that folder test1 under C:Data folder.
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#springspring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
