All changes done and implemented Sample Spring Boot Project with H2 (in memory database), Maven, Rest. Working 061221.

--- a/SpringBoot_Banking_App_060621/src/main/resources/application.properties
+++ b/SpringBoot_Banking_App_060621/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url=jdbc:h2:mem:testdb2
 #spring.datasource.username=sa
 #springspring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+#This is needed for creating Alien table before datasourceinitialization, that is before data.sql runs.
+#spring.jpa.hibernate.ddl-auto=none  #This is not needed.
